<resources>
    <string name="app_name">App Contactos</string>

    <string name="hint_pais">Pais</string>
    <string name="hint_nombres">Nombre</string>
    <string name="hint_telefono">Telefono</string>
    <string name="hint_nota">Nota</string>
    <string name="hint_foto">Foto</string>
    <string name="btn_lista_contactos">Lista Contactos</string>

    <string name="btn_guarda">Guardar Contacto</string>
    <string name="btn_editar">Actualizar Contacto</string>
    <string name="menu_nuevo">Nuevo Contacto</string>

    <string name="msg_about_version">Version</string>
    <string name="dialog_option_ok">Aceptar</string>
    <string name="app_copyright">Copyright © 2024 \nProg. Movil 1 - Examen1. \nAll right reserved</string>
    <string name="app_integrantes">Yefrin Amaya - 201710010063 \nIsmael Mayorga - 202030070024 \nDamaris Muñoz - 202110050094</string>

    <string name="share_content">Me gustaría compartir el siguiente contacto contigo.</string>
    <string name="img_content_description">Foto</string>

</resources>