<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/viewPais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_pais" />

        <EditText
            android:id="@+id/txtPais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewNombre"
            android:textSize="18sp" />

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/viewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_nombres" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewNombre"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_telefono" />

        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:labelFor="@+id/viewTelefono"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_nota" />


        <EditText
            android:id="@+id/txtNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/viewNota"
            android:inputType="textMultiLine"
            android:textSize="18sp"
            android:maxLines="10"
            android:minLines="6"/>




        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />

        <LinearLayout
            android:id="@+id/container1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="35dp"
            android:paddingLeft="@dimen/spacing_middle"
            android:paddingRight="@dimen/spacing_middle">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_xsmall"
                android:layout_marginLeft="@dimen/spacing_xsmall"
                android:layout_marginRight="@dimen/spacing_xsmall"
                android:layout_marginTop="@dimen/spacing_xsmall"
                android:layout_weight="1"
                android:visibility="visible"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:id="@+id/btnCompartir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            app:srcCompat="@drawable/shape_circle"
                            app:tint="@color/colorPrimary" />

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_centerInParent="true"
                            android:src="@android:drawable/ic_menu_share"
                            app:backgroundTint="@color/design_default_color_primary"
                            app:tint="@color/white" />

                    </RelativeLayout>

                    <View
                        android:layout_width="@dimen/spacing_middle"
                        android:layout_height="0dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Compartir \nContacto"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_60"
                            android:textStyle="bold"/>


                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="0dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_xsmall"
                android:layout_marginLeft="@dimen/spacing_xsmall"
                android:layout_marginRight="@dimen/spacing_xsmall"
                android:layout_marginTop="@dimen/spacing_xsmall"
                android:layout_weight="1"
                android:visibility="visible"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:id="@+id/btnVerFoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            app:srcCompat="@drawable/shape_circle"
                            app:tint="@color/colorPrimary" />

                        <ImageView
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_centerInParent="true"
                            android:src="@android:drawable/ic_menu_gallery"
                            app:backgroundTint="@color/design_default_color_primary"
                            app:tint="@color/white" />

                    </RelativeLayout>

                    <View
                        android:layout_width="@dimen/spacing_middle"
                        android:layout_height="0dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ver \nFoto"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_60"
                            android:textStyle="bold"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_middle"
            android:paddingRight="@dimen/spacing_middle">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_xsmall"
                android:layout_marginLeft="@dimen/spacing_xsmall"
                android:layout_marginRight="@dimen/spacing_xsmall"
                android:layout_marginTop="@dimen/spacing_xsmall"
                android:layout_weight="1"
                android:visibility="visible"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:id="@+id/btnEliminar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp">

                        <ImageView
                            app:srcCompat="@drawable/shape_circle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            app:tint="@color/colorPrimary" />

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_delete"
                            app:backgroundTint="@color/design_default_color_primary"
                            app:tint="@color/white" />

                    </RelativeLayout>

                    <View
                        android:layout_width="@dimen/spacing_middle"
                        android:layout_height="0dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Eliminar \nContacto"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_60"
                            android:textStyle="bold"/>


                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="0dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_xsmall"
                android:layout_marginLeft="@dimen/spacing_xsmall"
                android:layout_marginRight="@dimen/spacing_xsmall"
                android:layout_marginTop="@dimen/spacing_xsmall"
                android:layout_weight="1"
                android:visibility="visible"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:id="@+id/btnActualizar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            app:srcCompat="@drawable/shape_circle"
                            app:tint="@color/colorPrimary" />

                        <ImageView
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_edit"
                            app:backgroundTint="@color/design_default_color_primary"
                            app:tint="@color/white" />

                    </RelativeLayout>

                    <View
                        android:layout_width="@dimen/spacing_middle"
                        android:layout_height="0dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Actualizar \nContacto"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_60"
                            android:textStyle="bold"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />

        <LinearLayout
            android:id="@+id/container3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_middle"
            android:paddingRight="@dimen/spacing_middle">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_xsmall"
                android:layout_marginLeft="@dimen/spacing_xsmall"
                android:layout_marginRight="@dimen/spacing_xsmall"
                android:layout_marginTop="@dimen/spacing_xsmall"
                android:layout_weight="1"
                android:visibility="visible"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:id="@+id/btnLlamar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp">

                        <ImageView
                            app:srcCompat="@drawable/shape_circle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            app:tint="@color/colorPrimary" />

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/phone"
                            app:backgroundTint="@color/design_default_color_primary"
                            app:tint="@color/white" />

                    </RelativeLayout>

                    <View
                        android:layout_width="@dimen/spacing_middle"
                        android:layout_height="0dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Realizar \nLlamada"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_60"
                            android:textStyle="bold"/>


                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>





        </LinearLayout>

        <Button
            android:id="@+id/btnGuarda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_guarda"
            android:textSize="18sp" />


    </LinearLayout>
</LinearLayout>